fixing spacing, customizable rows for editions table

--- a/static/css/components/work.less
+++ b/static/css/components/work.less
@@ -120,7 +120,7 @@ h2.edition-byline {
   border-bottom: 1px solid @lighter-grey;
   padding-bottom: 5px;
   font-weight: bold;
-  margin-top: 30px;
+  margin-top: 40px;
 }
 
 .work-menu li {
